<resources>
    <string name="app_name">PetPals</string>
    <string name="petpals">PetPals</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_messages">View Messages</string>
    <string name="login">Login</string>
    <string name="my_profile">my profile</string>
    <string name="admin">admin</string>
    <string name="logout">Logout</string>
    <string name="petpal_logo">PetPal Logo</string>
    <string name="x">x</string>
    <string name="back">Back</string>
    <string name="view_posts">View Posts</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="sex">Sex</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">save</string>
    <string name="new_post">New post</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="speak">Speak</string>
    <string name="cancel">Cancel</string>
    <string name="whats_on_your_mind">Whats on your mind?...</string>
    <string name="banned_users">Banned Users...</string>
    <string name="enter_post_id">Enter Post ID</string>
    <string name="find">find</string>
</resources>