<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="326dp"
        android:layout_height="287dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/petpals"
        android:contentDescription="@string/petpal_logo" />

    <Button
        android:id="@+id/admin"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/admin"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/inbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/inbox"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/view_messages"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>