<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLandingPage">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/petpal_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/petpals" />

    <Button
        android:id="@+id/landing_admin"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/admin"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/landing_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/landing_profile"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/landing_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/landing_logout"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_corner_red"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/landing_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="UserName"
        android:textColor="@color/petpals"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pet_posts"
        android:layout_width="388dp"
        android:layout_height="381dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        android:text="Welcome to PetPals"
        android:textColor="@color/black"
        android:textColorLink="@color/petpals"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/landing_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/new_post"
        android:tint="@color/petpals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/landing_admin"
        app:layout_constraintTop_toBottomOf="@+id/pet_posts"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/view_post_by_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:tint="@color/petpals"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/view_posts"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/landing_admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:layout_constraintTop_toBottomOf="@+id/pet_posts"
        app:srcCompat="@android:drawable/ic_menu_zoom" />

</androidx.constraintlayout.widget.ConstraintLayout>